--- a/index.html
+++ b/index.html
@@ -76,7 +76,36 @@
 
          
        </section>
-       <footer>
+       <br>
+       <main>
+         <div class="img-item">
+            <h3 class="img-title">Awlays keep a positive <br> mindset</h3>
+            <button class="img-button">Call Now</button>
+
+         </div>
+       </main>
+       <footer class="footer">
+            <div class="footer-left">
+                <h3 class="fotter-title">Future</h3> <br>
+                <p class="footer-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p> <br> <br>
+
+                <h5>Email : info@gmail.com</h5> <br>
+                <h5 class="phone">Phone : 01500 00 00 00</h5>
+                <br>
+
+                <img src="icons/fb.png" alt="facebook">
+                <img src="icons/twitter.png" alt="twitter">
+                <img src="icons/youtube.png" alt="youtube">
+
+            </div>
+            <div class="footer-right">
+                <h3 class="right-title">Subscribe</h3> <br>
+                <form class="footer-form">
+                    <input class="email" type="text" placeholder="Enter your email"> <br> <br>
+                    
+                    <button class="submit" type="submit">Subscribe</button>
+                </form>
+            </div>
 
        </footer>
 </body>
